--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "fastclick": "^1.0.6",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
+    "vconsole-webpack-plugin": "^1.4.2",
     "vue-template-compiler": "^2.5.17"
   }
 }
